# 039

./: AGENTS.md  AGENT_RULES.md  Cargo.toml  README.md
.github/workflows/: mdbook-pages.yml
docs/: _config.yml  index.md
docs-book/: book.toml
docs-book/src/: README.md  SUMMARY.md
docs-book/src/articles/: design-rationale-architecture.md
docs-book/src/design/: cad-architecture-overview.md  cad-core-spec.md  command-state-machines.md  http-api.md  layers-properties.md  snapping-constraints.md
docs-book/src/requirements/: app-ui.md
docs/articles/: design-rationale-architecture.md  why-this-architecture.md
docs/design/: app-interactions.md  architecture-overview.md  cad-architecture-overview.md  command-state-machines.md  persistence-model.md  state-transitions.md  test-plan.md
docs/requirements/: CAD_COMMAND_SPECIFICATION.md  cad-core.md  rendering-core.md
src/: lib.rs  tests.rs
src/scene/: camera.rs  context.rs  error.rs  id.rs  mesh.rs  mod.rs  shape.rs  tessellation.rs  tests.rs  transform.rs  visual.rs  world.rs
src/server/: mod.rs  models.rs
